--- a/m_corporate/build.gradle
+++ b/m_corporate/build.gradle
@@ -1,67 +1,57 @@
 buildscript {
     ext {
+        jooqVersion = '3.11.9'
         mysqlVersion = '8.0.13'
     }
-    repositories {
-        mavenCentral()
-        maven { url 'https://plugins.gradle.org/m2/' }
 
+    repositories {
+        mavenLocal()
+        mavenCentral()
     }
+
     dependencies {
-        classpath 'nu.studer:gradle-jooq-plugin:3.0.2'
+        classpath "org.jooq:jooq-codegen-maven:${jooqVersion}"
+        classpath "mysql:mysql-connector-java:${mysqlVersion}"
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'nu.studer.jooq'
-
-group = 'uca.corporate'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
 
 repositories {
+    mavenLocal()
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
 }
+
 
 dependencies {
+    compile "org.jooq:jooq:${jooqVersion}"
+    implementation "org.jooq:jooq-codegen-maven:${jooqVersion}"
     implementation "mysql:mysql-connector-java:${mysqlVersion}"
-    implementation "org.jooq:jooq"
-    jooqRuntime "mysql:mysql-connector-java:${mysqlVersion}"
+    testCompile 'junit:junit:4.12'
 }
 
-jooq {
-    version = '3.11.9'
-    edition = 'OSS'
-    corporate(sourceSets.main) {
-        jdbc {
-            driver = 'com.mysql.jdbc.Driver'
-            url = 'jdbc:mysql://192.168.63.195:3306/corporate'
-            user = 'uca'
-            password = 'password'
-            properties {
-                property {
-                    key = 'ssl'
-                    value = 'true'
-                }
-            }
+task generateJooq << {
+// Use your favourite XML builder to construct the code generation configuration file
+// ----------------------------------------------------------------------------------
+    def writer = new StringWriter()
+    def xml = new groovy.xml.MarkupBuilder(writer)
+            .configuration('xmlns': 'http://www.jooq.org/xsd/jooq-codegen-3.11.0.xsd') {
+        jdbc() {
+            driver('com.mysql.cj.jdbc.Driver')
+            url('jdbc:mysql://127.0.0.1:3306/corporate')
+            user('andy')
+            password('password')
         }
-        generator {
-            name = 'org.jooq.codegen.DefaultGenerator'
-            strategy {
-                name = 'org.jooq.codegen.DefaultGeneratorStrategy'
-                // ...
-            }
-            database {
-                name = 'org.jooq.meta.mysql.MySQLDatabase'
-                inputSchema = 'corporate'
-                outputSchemaToDefault = true
-                recordVersionFields = true
+        generator() {
+            database() {
+                name 'org.jooq.meta.mysql.MySQLDatabase'
+                inputSchema 'corporate'
+                outputSchemaToDefault true
+                recordVersionFields true
                 forcedTypes {
                     forcedType {
-                        name = 'Boolean'
-                        expression = 'corporate\\.enabled'
-                        types = 'tinyint'
+                        name 'Integer'
+                        types 'tinyint'
                     }
                     /*forcedType {
                         name = 'Integer'
@@ -71,19 +61,24 @@ jooq {
                 }
                 // ...
             }
-            generate {
-                javaTimeTypes = true
-//                relations = true
-//                deprecated = false
-//                records = true
-//                immutablePojos = true
-//                fluentSetters = true
-                // ...
+
+            // Watch out for this caveat when using MarkupBuilder with "reserved names"
+            // - https://github.com/jOOQ/jOOQ/issues/4797
+            // - http://stackoverflow.com/a/11389034/521799
+            // - https://groups.google.com/forum/#!topic/jooq-user/wi4S9rRxk4A
+            generate([:]) {
+                javaTimeTypes true
+//                pojos true
+//                daos true
             }
-            target {
-                packageName = 'jooq.generated.corporate'
-                 directory = 'src/main/java'
+            target() {
+                packageName('jooq.generated.corporate')
+                directory('src/main/java')
             }
         }
     }
+
+// Run the code generator
+// ----------------------
+    org.jooq.codegen.GenerationTool.generate(writer.toString())
 }
