--- a/m_corporate/build.gradle
+++ b/m_corporate/build.gradle
@@ -73,7 +73,7 @@ task generateJooq << {
             }
             target() {
                 packageName('jooq.generated.corporate')
-                directory('src/main/java')
+                directory("$project.name/src/main/java")
             }
         }
     }
