--- a/p_corporate/build.gradle
+++ b/p_corporate/build.gradle
@@ -28,6 +28,7 @@ ext {
 }
 
 dependencies {
+    implementation project(':m_corporate')
     implementation 'org.springframework.boot:spring-boot-starter-jooq'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
