--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'platform'
 include 'p_corporate'
 include 'm_corporate'
+include 'fileserver'
+include 'common'
+include 'util'
 
