--- a/fileserver/build.gradle
+++ b/fileserver/build.gradle
@@ -12,7 +12,9 @@ buildscript {
         classpath 'nu.studer:gradle-jooq-plugin:3.0.2'
     }
 }
-
+plugins {
+    id "org.asciidoctor.convert" version "1.5.3"
+}
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -31,6 +33,7 @@ ext {
     set('springCloudVersion', 'Greenwich.RC2')
 }
 
+
 dependencies {
     implementation project(':common')
     implementation project(':util')
@@ -41,23 +44,37 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
-    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
-    implementation 'org.springframework.cloud:spring-cloud-starter-security'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-security'
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
-//    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.3.RELEASE'
+    testCompile 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.3.RELEASE'
     runtimeOnly 'mysql:mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
     implementation "javax.persistence:javax.persistence-api:+"
     jooqRuntime "mysql:mysql-connector-java:${mysqlVersion}"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.h2database:h2'
+
 }
 
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
+}
+
+ext {
+    snippetsDir = file('build/generated-snippets')
+}
+
+test {
+    outputs.dir snippetsDir
+}
+
+asciidoctor {
+    inputs.dir snippetsDir
+    dependsOn test
 }
 
 jooq {
