complete the file upload...

--- a/fileserver/build.gradle
+++ b/fileserver/build.gradle
@@ -37,6 +37,7 @@ ext {
 dependencies {
     implementation project(':common')
     implementation project(':util')
+    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.boot:spring-boot-starter-jooq'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
