--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,7 +9,8 @@ repositories {
 }
 
 dependencies {
-    implementation "javax.persistence:javax.persistence-api:+"
-    compileOnly 'org.projectlombok:lombok:+'
-    implementation "org.jooq:jooq:+"
+    implementation project(':util')
+    implementation "javax.persistence:javax.persistence-api:2.2"
+    compileOnly 'org.projectlombok:lombok:1.18.4'
+    implementation "org.jooq:jooq:3.11.9"
 }
