--- a/fileserver/build.gradle
+++ b/fileserver/build.gradle
@@ -49,11 +49,14 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-security'
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+    implementation 'net.coobird:thumbnailator:0.4.8'
+    implementation 'net.logstash.logback:logstash-logback-encoder:5.2'
     asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.3.RELEASE'
     testCompile 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.3.RELEASE'
     runtimeOnly 'mysql:mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
-    implementation "javax.persistence:javax.persistence-api:+"
+    implementation "javax.persistence:javax.persistence-api:2.2"
+    implementation 'org.redisson:redisson-spring-boot-starter:3.10.1'
     jooqRuntime "mysql:mysql-connector-java:${mysqlVersion}"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -84,8 +87,8 @@ jooq {
     fileServer(sourceSets.main) {
         jdbc {
             driver = 'com.mysql.cj.jdbc.Driver'
-            url = 'jdbc:mysql://192.168.63.195:3306/file'
-            user = 'uca'
+            url = 'jdbc:mysql://127.0.0.1:3306/file'
+            user = 'andy'
             password = 'password'
             properties {
                 property {
