--- a/util/build.gradle
+++ b/util/build.gradle
@@ -9,5 +9,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-databind:+'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.8'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8'
+    implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.8'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.1.2.RELEASE'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.10.1'
+    testImplementation 'org.projectlombok:lombok:1.18.4'
+    testImplementation 'junit:junit:4.12'
 }
